<resources>
    <string name="app_name">UI for the the registeration form</string>
    <string name="create_an_account_to_start_doing_more">Create an account to start doing more</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
</resources>
